symphony/assets/admin.css
/* ... */
/*#wrapper {*/
/*	position: relative;*/
/*	min-height: 100%;*/
/*}*/
#header {
	margin: 0 0 1.8em;
	color: #fff;
	position: relative;
}
#header h1 {
	background: #282828;
	padding: 18px;
	text-shadow: -1px 2px 3px #111;
	font-weight: normal;
	line-height: 1;
/*	z-index: 10;*/
	position: relative;
}
#header h1 a {
	color: #f1f1f1;
	text-decoration: none;
}
#header h1 a:hover {
	color: #fff;
}
#session {
	margin: -30px 0 0;
	padding: 0 19px 0 0;
	float: right;
	position: relative;
/*	z-index: 11;*/
}
#session li {
	display: inline;
	padding-left: 12px;
}
#session a {
/*	padding: 5px;*/
	border: none;
	text-decoration: none;
	color: #fff;
}
#session a:hover {
	color: #ccb;
}

/*-----------------------------------------------------------------------------
	Header: Navigation
-----------------------------------------------------------------------------*/

#nav {
	z-index: 3;
	margin: 0;
	background-color: #d7d7d2;
	background: -webkit-gradient(
		linear,
		left top,
		left bottom,
		color-stop(0, #efefed),
		color-stop(1, #d7d7d2)
	);
	background: -moz-linear-gradient(
		top,
		#efefed,
		#d7d7d2
	);
	border-bottom: 1px solid #bfbfb7;
	-webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.3);
	height: 30px;
	list-style: none;
	padding: 0 8px 0;
	white-space: nowrap;
	font-size: 12px;
	display: block;
}
#nav:after{
	content: " ";
	display: block;
	visibility: hidden;
	clear: both;
}
#nav ul, #nav li {
	margin: 0;
	padding: 0;
}
#nav .content {
	float: left;
}
#nav .structure {
	float: right;
}
#nav > ul > li {
	border-top: 1px solid transparent;
	color: #555;
	color: hsla(0, 0%, 0%, 0.65);
	display: block;
	float: left;
	height: 29px;
	line-height: 30px;
	padding: 0 10px;
	position: relative;
	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3);
	z-index: 3;
	cursor: pointer;
}
#nav > ul > li.active {
	background-color: #5c83ba;
	background: -moz-linear-gradient(
		top,
		#6f92c2,
		#4d78b4
	);
	background: -webkit-gradient(
		linear,
		left top,
		left bottom,
		color-stop(0, #6f92c2),
		color-stop(1, #4d78b4)
	);
	height: 30px;
	border-bottom: 1px solid #808080;
	color: #fff;
	text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.2);

	z-index: 2;
	height: 29px;
}
#nav > ul > li:hover {
	border-bottom: 1px solid #808080;
	color: #fff;
	text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.2);
	background-color: #3e3e3e;
	background: -moz-linear-gradient(
		top,
		#595959,
		#3e3e3e
	);
	background: -webkit-gradient(
		linear,
		left top,
		left bottom,
		color-stop(0, #595959),
		color-stop(1, #3e3e3e)
	);
	border-bottom: 1px solid #808080;
	color: #fff;
	text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.5);
	z-index: 5;
	height: 29px;
}
#nav li ul {
	margin: 0;
	padding: 0;
	display: none;
	background: rgba(250, 250, 250, 0.95);
	border: 1px solid rgba(68, 68, 68, 0.2);
	border-top: none;
	-moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
	-webkit-box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
	list-style: none;
	left: 0;
	min-width: 120px;
	position: absolute;
	top: 30px;
	font-size: 12px;
	text-shadow: 1px 1px 0 #fff;
}
#nav .structure li ul {
	left: auto;
	right: 0;
}
#nav li:hover ul {
	display: block;
}
#nav ul a {
	color: rgb(68, 68, 68);
	display: block;
	font-weight: normal;
	padding: 0 10px;
	text-decoration: none;
}
#nav ul a:hover {
	margin-left: -1px;
	margin-right: -1px;
	background: #bababa;
	color: #fff;
	text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
	border-color: rgba(255, 255, 255, 0.8);
}
#nav ul,
#nav ul li:last-child a {
	-moz-border-radius-bottomright: 3px;
	-moz-border-radius-bottomleft: 3px;
	-webkit-border-bottom-right-radius: 3px;
	-webkit-border-bottom-left-radius: 3px;
	border-bottom-right-radius: 3px;
	border-bottom-left-radius: 3px;
}
#context {
	clear: both;
	margin: -19px 0 19px;
	background: #F4F4F4;
	color: #000;
	border-bottom: 1px solid #d5d6d2;
	-moz-box-shadow: inset 0 -1px 7px rgba(0, 0, 0, 0.2);
	-webkit-box-shadow: inset 0 -1px 7px rgba(0, 0, 0, 0.2);
}
#context:after {
	content: " ";
	display: block;
	visibility: hidden;
	clear: both;
}
#breadcrumbs nav,
#breadcrumbs p {
	margin: 0;
	padding: 0;
	float: left;
}
#breadcrumbs {
	float: left;
	padding: 20px 0 17px 18px;
}
#breadcrumbs a, #breadcrumbs span {
	padding: 0;
	font: 127.28% Lucida Grande, Leelawadee, Tahoma, Verdana, sans-serif;
	color: rgba(0, 0, 0, 0.6);
	text-shadow: 0 0 1px #fff;
	float: left;
}
#breadcrumbs a {
	text-decoration: none;
	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
}
#breadcrumbs a:hover {
	border-bottom-color: rgba(0, 0, 0, 0.3);
	color: rgba(0, 0, 0, 0.8);
}
#breadcrumbs span {
	padding: 0 0.4em;
}
#context h2 {
	border-bottom: 0;
	padding: 0;
	float: left;
}
#context .actions {
	margin: 14px 18px 0;
	padding: 0;
	float: right;
}
#context .actions li {
	float: right;
}
#contents {
	padding: 0 0 5em;
}
#contents h2 {
	padding: 20px 18px 17px;
}
#contents h2 span {
	float: left;
}
#contents h2:after {
	content: "";
	display: block;
	clear: both;
	height: 0;
}
#contents h2 .button {
	margin-top: -3px;
	margin-bottom: -2px;
}


/*-----------------------------------------------------------------------------
	Index page
-----------------------------------------------------------------------------*/

.index h2 {
	border: none;
}
.index form {
	margin: 0;
	padding: 0;
}
.index .actions {
	text-align: right;
	padding: 1.75em 1.75em 0 0;
	height: 38px;
}
.index .actions select {
	width: auto;
	display: -moz-inline-stack; /* Firefox 2 */
	display: inline-block;
	margin: 3px 0 0;
}
.index .actions input {
	margin: 0 0 0 5px;
}
.index .actions + ul.page {
	margin-top: -58px;
}
ul.page {
	margin: 0;
	padding: 20px 50px 0 19px;
	height: 36px;
	color: #887;
}
ul.page li {
	display: inline;
	margin-right: 0.75em;
}
ul.page li[title] {
	color: #222;
}
ul.page a {
	margin: 0 -0.67em;
	padding: 0.67em;
	text-decoration: none;
}

/*-----------------------------------------------------------------------------
	Single page
-----------------------------------------------------------------------------*/

.single form {
	margin: 0 19px;
}
/* ... */

